fix(ci): improve cross-platform build compatibility
- Added TARGETARCH build argument to workflow for proper platform detection
- Replaced uname-based architecture detection with TARGETARCH in Dockerfile
- Ensures consistent behavior across different build platforms (amd64/arm64/arm/ppc64le)

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -50,6 +50,8 @@ jobs:
           file: ./docker/Dockerfile
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/ppc64le
           push: true
+          build-args: |
+            TARGETARCH=${{ matrix.platform == 'linux/amd64' && 'amd64' || matrix.platform == 'linux/arm64' && 'arm64' || matrix.platform == 'linux/arm/v7' && 'arm' || 'ppc64le' }}
           tags: |
             ${{ env.DOCKER_HUB_REPO }}:latest
             ${{ env.DOCKER_HUB_REPO }}:${{ steps.extract_version.outputs.version }}
