fix(docker): improve playwright installation in multi-platform builds
- Added PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1 flag to separate package installation
- Modified playwright install command to handle browser download separately
- Ensures more reliable installation across different architectures

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -28,9 +28,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 WORKDIR /app
 COPY requirements.txt .
-# 修改 playwright 安装命令
 RUN pip install --upgrade pip && \
     pip install --no-cache-dir -r requirements.txt && \
+    PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1 pip install playwright && \
     playwright install chromium
 
 # Second stage: runtime environment
