fix(docker): add required build dependencies for lxml
- Added libxml2-dev and libxslt1-dev packages to builder stage
- These development libraries are required for compiling lxml package
- Maintains multi-stage build structure with minimal runtime image

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,6 +4,8 @@ FROM python:3.10-slim AS builder
 # install dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
+    libxml2-dev \
+    libxslt1-dev \
     libglib2.0-0 \
     libnss3 \
     libnspr4 \
