--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -38,6 +38,7 @@ RUN pip install --upgrade pip && \
 # Second stage: runtime environment
 FROM python:3.10-slim
 WORKDIR /app
+ENV CS_SERVER_HOST=0.0.0.0
 
 COPY --from=builder /etc/apt/sources.list.d/debian.sources /etc/apt/sources.list.d/debian.sources
 COPY --from=builder /usr/local/lib/python3.10/site-packages /usr/local/lib/python3.10/site-packages
