--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,23 +5,23 @@ services:
     command: ["python", "api.py"]
     environment:
       # The minimum thread pool created when the browser starts. Enabling the thread pool can accelerate the data crawling speed.
-      - BROWSER_POOL_MIN_SIZE = 2
+      - CS_BROWSER_POOL_MIN_SIZE = 2
       # The maximum thread pool size allowed for the browser
-      - BROWSER_POOL_MAX_SIZE = 10
+      - CS_BROWSER_POOL_MAX_SIZE = 10
       # you proxy server
-      # - PROXY=http://127.0.0.1:15154
+      # - CS_PROXY=http://127.0.0.1:15154
       # region for search engine
-      - REGION=com
+      - CS_REGION=com
       #
       # define browser user agent
-      # - USER_AGENT = ''
+      # - CS_USER_AGENT = ''
       #
       # define user agent mode, can be "random" or None, If None, use the provided user_agent as-is. Default: None.
-      # - USER_AGENT_MODE = None
+      # - CS_USER_AGENT_MODE = None
       #
       # The directory used to store browser data. Usually, it does not need to be defined.
       # If you define an address, it is recommended to mount the local directory.
-      # - USER_DATA_DIR = '/path/to/user/data/dir'
+      # - CS_USER_DATA_DIR = '/path/to/user/data/dir'
     restart: always
     ports:
       - "127.0.0.1:12321:12321"
