--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,6 +4,9 @@ services:
     working_dir: /app
     command: ["python", "api.py"]
     environment:
+       # The port used by the server. If not defined, the default port is 12321.
+      # - CS_SERVER_PORT=12321
+      #
       # The minimum thread pool created when the browser starts. Enabling the thread pool can accelerate the data crawling speed.
       - CS_BROWSER_POOL_MIN_SIZE = 2
       # The maximum thread pool size allowed for the browser
@@ -22,6 +25,9 @@ services:
       # The directory used to store browser data. Usually, it does not need to be defined.
       # If you define an address, it is recommended to mount the local directory.
       # - CS_USER_DATA_DIR = '/path/to/user/data/dir'
+      #
+      # log level, can be 'DEBUG', 'INFO', 'WARNING', 'ERROR', 'CRITICAL'
+      # - CS_LOG_LEVEL = 'INFO'
     restart: always
     ports:
       - "127.0.0.1:12321:12321"
