--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  crawler:
+  cstoolbox:
     image: insuns/cstoolbox:latest
     container_name: cstb
     working_dir: /app
@@ -9,28 +9,32 @@ services:
       # - CS_SERVER_PORT=12321
       #
       # The minimum thread pool created when the browser starts. Enabling the thread pool can accelerate the data crawling speed.
-      - CS_BROWSER_POOL_MIN_SIZE = 2
+      # - CS_BROWSER_POOL_MIN_SIZE=2
+      #
       # The maximum thread pool size allowed for the browser
-      - CS_BROWSER_POOL_MAX_SIZE = 10
+      # - CS_BROWSER_POOL_MAX_SIZE=10
       #
       # you proxy server
       - CS_PROXY=http://host.docker.internal:15154
       #
-      # region for search engine
-      - CS_REGION=com
+      # region for search engine, cn/com/hk/uk/jp etc. default: com
+      # - CS_REGION=com
       #
-      # define browser user agent
-      # - CS_USER_AGENT = ''
+      # define browser user agent, default: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 Chrome/116.0.0.0 Safari/537.36
+      # - CS_USER_AGENT=''
       #
       # define user agent mode, can be "random" or None, If None, use the provided user_agent as-is. Default: None.
-      # - CS_USER_AGENT_MODE = None
+      # - CS_USER_AGENT_MODE=None
       #
       # The directory used to store browser data. Usually, it does not need to be defined.
       # If you define an address, it is recommended to mount the local directory.
       # - CS_USER_DATA_DIR = '/path/to/user/data/dir'
       #
       # log level, can be 'DEBUG', 'INFO', 'WARNING', 'ERROR', 'CRITICAL'
-      # - CS_LOG_LEVEL = 'INFO'
+      - CS_LOG_LEVEL=DEBUG
+      #
+      # The screenshot config for playwright. if true, the screenshot will be saved in logs dir.
+      - CS_SCREENSHOT=True
     restart: always
     ports:
       - "127.0.0.1:12322:12321"
