--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,6 @@ Repository = "https://github.com/aidyou/cstoolbox"
 
 [project.scripts]
 cstoolbox = "cstoolbox.main:main"
-cstoolbox-server = "cstoolbox.main:main"
 
 [project.optional-dependencies]
 dev = []
@@ -57,7 +56,8 @@ publish-url = "https://upload.pypi.org/legacy/"
 explicit = true
 
 # run: `uv publish --index testpypi --token $TEST_PYPI_TOKEN`
-# test: `uv pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ cstoolbox`
+# run test directly: `uvx --index-url https://test.pypi.org/simple/ cstoolbox@1.0.4`
+# or: `uv pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ cstoolbox`
 [[tool.uv.index]]
 name = "testpypi"
 url = "https://test.pypi.org/simple/"
